# langchain_playground

./: .gitignore  README.md  agent.ipynb  changple_proto_3.ipynb  docker-compose.yml  fewshot.ipynb  main.ipynb  main.py  memory.ipynb  messages.ipynb  model.ipynb  poetry.ipynb  pyproject.toml  rag1.ipynb  rag2.ipynb  rag2_chain.ipynb  rag2_chain.py  requirements.txt  test_imports.py
chatbot/: urls.py  views.py
chatbot/services/: chain.py  ingest.py  ingest_4000.py
chatbot/templates/chatbot/: chat.html
config/: settings.py  urls.py
pages/: 01_TestPage.py  02_MemoryPage.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
