[project]
name = "langchain-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "langchain-google-vertexai>=2.0.20",
    "langchain-openai>=0.3.13",
    "langgraph>=0.3.31",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
]
