[project]
name = "lang-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langchain-postgres>=0.0.15",
    "pgvector>=0.3.6",
    "psycopg>=3.2.10",
]
